syntax = "proto3";

package igrpc;

message OfficialAccountPlatform {
    string Appid = 1;
    string ComponentVerifyTicket = 2;
    string EncodingAesKey = 3;
    string AppSecret = 4;
    string ComponentAccessToken = 5;
    string PreAuthCode = 6;
    string Token = 7;
}

message OfficialAccount {
    string Appid =1;
    string AuthorizerAccessToken = 2;
    int64 AuthorizerAccessTokenExpiresIn = 3;
    string AuthorizerRefreshToken = 4;
}

message ComponentVerifyTicket {
    string TimeStamp = 1;
    string Nonce = 2;
    string MsgSign = 3;
    bytes bts = 4;
    string AuthorizationCode = 5;
}
